--- a/docker/src/@orb.yml
+++ b/docker/src/@orb.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 description: >
-  Help to deploy symfony projects
+  Sample orb description
 # What will your orb allow users to accomplish?
 # Descriptions should be short, simple, and informative.
 
@@ -11,6 +11,5 @@ display:
   source_url: "https://github.com/donkeycode/circle-orbs"
 
 # If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
-orbs:
- node: donkeycode/node@0.0.4
- docker: donkeycode/docker@0.0.1
+# orbs:
+#  hello: circleci/hello-build@0.0.5
