--- a/rancher.yaml
+++ b/rancher.yaml
@@ -28,6 +28,8 @@ jobs:
                 type: string
         steps:
             - utils/install_git
+            - run:
+                command: apk add openssh
             - checkout
             - deploy:
                 command: |
