--- a/docker.yaml
+++ b/docker.yaml
@@ -47,9 +47,7 @@ commands:
                             py-pip \
                             build-base \
                             && pip install six --upgrade --user \
-                            && pip install awscli --upgrade --user \
-                            && apk --purge -v del py-pip \
-                            && rm -rf /var/cache/apk/*
+                            && pip install awscli --upgrade --user
                     else
                         # sudo apt-get update
                         sudo apt-get install -y unzip curl
