--- a/angular.yaml
+++ b/angular.yaml
@@ -46,6 +46,10 @@ jobs:
                 default: apps/front
                 description: The angular base directory
                 type: string
+            dependencies_version:
+                default: v1
+                description: The deps version to force uncaching
+                type: string
             dockerfile_base_name:
                 default: Dockerfile-front
                 description: The docker base name eg Dockerfile-front
@@ -61,8 +65,8 @@ jobs:
                 angular_folder: <<parameters.angular_folder>>
             - restore_cache:
                 keys:
-                    - v1-dependencies-<<parameters.angular_folder>>-{{ checksum "<<parameters.angular_folder>>/package-lock.json" }}
-                    - v1-dependencies-<<parameters.angular_folder>>-
+                    - <<parameters.dependencies_version>>-dependencies-<<parameters.angular_folder>>-{{ checksum "<<parameters.angular_folder>>/package-lock.json" }}
+                    - <<parameters.dependencies_version>>-dependencies-<<parameters.angular_folder>>-
             - docker/ecr_login
             - run:
                 command: |
@@ -79,6 +83,10 @@ jobs:
             angular_folder:
                 default: apps/front
                 description: The angular base directory
+                type: string
+            dependencies_version:
+                default: v1
+                description: The deps version to force uncaching
                 type: string
             image_tag:
                 default: lts-alpine
@@ -100,14 +108,14 @@ jobs:
             - utils/install_git
             - restore_cache:
                 keys:
-                    - v1-dependencies-<<parameters.angular_folder>>-{{ checksum "<<parameters.angular_folder>>/package-lock.json" }}
-                    - v1-dependencies-<<parameters.angular_folder>>-
+                    - <<parameters.dependencies_version>>-dependencies-<<parameters.angular_folder>>-{{ checksum "<<parameters.angular_folder>>/package-lock.json" }}
+                    - <<parameters.dependencies_version>>-dependencies-<<parameters.angular_folder>>-
             - run:
                 command: npm install
                 name: Install node deps
                 working_directory: ~/project/<<parameters.angular_folder>>
             - save_cache:
-                key: v1-dependencies-<<parameters.angular_folder>>-{{ checksum "<<parameters.angular_folder>>/package-lock.json" }}
+                key: <<parameters.dependencies_version>>-dependencies-<<parameters.angular_folder>>-{{ checksum "<<parameters.angular_folder>>/package-lock.json" }}
                 paths:
                     - <<parameters.angular_folder>>/node_modules
             - when:
