--- a/wordpress/src/jobs/prepare.yml
+++ b/wordpress/src/jobs/prepare.yml
@@ -39,5 +39,9 @@ steps:
   - save_cache:
       paths:
         - <<parameters.wordpress_folder>>/web/wp
-        - <<parameters.wordpress_folder>>/web/app
       key: v2-wp-<<parameters.wordpress_folder>>-{{ checksum "~/project/<<parameters.wordpress_folder>>/composer.lock" }}
+  - save_cache:
+      paths:
+        - <<parameters.wordpress_folder>>/web/app
+      key: v2-wp-<<parameters.wordpress_folder>>-{{ REVISION }}
+  
